--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.5",
     "firebase": "^11.0.1",
     "framer-motion": "^11.11.11",
+    "motion": "^11.12.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.2",
     "react": "^18.2.0",
